--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "webpackbar": "^5.0.0-3"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "dayjs": "^1.10.7",
     "immer": "^9.0.5",
     "react": "^17.0.1",
