--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.11",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/node": "^17.0.35",
+    "@types/ramda": "^0.28.15",
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.9",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -71,6 +72,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.10.7",
     "immer": "^9.0.5",
+    "ramda": "^0.28.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.4.0",
